# Competitive-Coding

./: CMakeLists.txt  README.md
approach_techn/: subset_sum.cpp
approach_techn/dp/: 0_1_knap.cpp  1.cpp  2.cpp  3.cpp  beaut_subs.cpp  box_stack.cpp  edit_dist.cpp  floyd.cpp  floyd_hack_rank.cpp  goldmine.cpp  long_comm_sub.cpp  long_pal_sub.cpp  mat_chain.cpp  max_sum_break.cpp  mini_delet.cpp  mini_mov_str.cpp  on_way_home.cpp  path_to_orig.cpp  rod_cutting.cpp  stair_heav.cpp  subset_sum.cpp  temp_off.cpp
codechef/: BINADD.cpp  CHNGIT.cpp  CMPRSS.cpp  DIET.cpp  MDL.cpp  PLMU.cpp  chefing.cpp  demo.cpp  first.cpp  purify.cpp  spiral.cpp  ss.cpp  st.cpp  st12.cpp  stupi.cpp  theatre.cpp  watscore.cpp
codeforces/: disp_seg.cpp  ris.cpp
dcp/: 1.cpp  1_optimised.cpp  2.cpp  codef_595.cpp  count_freq.cpp  count_freq_hashing.cpp  r2.cpp
hackerrank/: 2darray_vect.cpp  AlternatingCharacters.cpp  SansaandXOR.cpp  SherlockValidStr.cpp  larryarray.cpp  migr_birds.cpp  nat.cpp  twodvect.cpp  unordmap.cpp
prelude/: README.md  ajuggling.cpp  as_prod_two_prime.cpp  closepri.cpp  cpmmass.cpp  cyclelink.cpp  detectlooplink.cpp  doublinkli.cpp  even_odd_micr.cpp  fast_mod_multipli.cpp  gg.cpp  lastdig_fact.cpp  link.cpp  mod_mult_inverse.cpp  parant_match.cpp  primesetbit.cpp  pripal.cpp  reversalalg.cpp  subarray.cpp  subsequ.cpp  sum1_optim  sumpri.cpp  sumprime.cpp  swapele.cpp  test.cpp
prelude/ca3/: 2.cpp  activ.cpp  allprif.cpp  ata.cpp  ca3_2.cpp  coincha.cpp  fractknap.cpp  frug.cpp  kjag.cpp  knap.cpp  pat.cpp  police.cpp  pre_ca3.cpp  stormer.cpp
prelude/dcp/: sum1.cpp
prelude/etp/: expo_squarr.cpp  max_prod_subset.cpp  (+3 more)
(+51 files in other folders)
